<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UsernameEntryActivity" >

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/saveUsername_button"
            style="@style/ChooseUsernameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green"
            android:text="@string/saveBtn" />
	
        <Button
            android:id="@+id/cancelUsername_button"
            style="@style/ChooseUsernameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red"
            android:text="@string/cancelBtn" />
    </LinearLayout>

</LinearLayout>