<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp" >

        <TextView
            android:id="@+id/isConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:background="#FF0000"
            android:text="@string/notConnected"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/isConnected"
            android:layout_centerHorizontal="true"
            android:background="#ff333333"
            android:padding="10dp"
            android:text="@string/scan"
            android:textColor="#ffcccccc" />

        <LinearLayout
            android:id="@+id/bookDetailsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/scan_button"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff000000"
                android:textIsSelectable="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffa13143"
                android:textIsSelectable="true" />

            <ImageView
                android:id="@+id/thumb"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:contentDescription="@string/thumb" />

            <TextView
                android:id="@+id/book_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff592d94"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/book_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff000000"
                android:textIsSelectable="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/star_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>

                <TextView
                    android:id="@+id/book_rating_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff2d6994"
                    android:textIsSelectable="true"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bookDetailsList"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/borrow_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/borrowBtn" />

            <Button
                android:id="@+id/return_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnBtn" />
        </LinearLayout>

        <Button
            android:id="@+id/saved_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>